# OOP

./: LICENSE  README.md
Lab1/: CMakeLists.txt  README.md
Lab1/CrosswordSolver/: CMakeLists.txt
Lab1/CrosswordSolver/source/: CrosswordSolver.cpp
Lab1/Dialogue/: CMakeLists.txt
Lab1/Dialogue/source/: main.cpp
Lab1/Tests/: CMakeLists.txt
Lab1/Tests/source/: test_CrosswordSolver.cpp
Lab2/: CMakeLists.txt  Doxyfile  README.md
Lab2/Dialogue/: CMakeLists.txt
Lab2/Dialogue/source/: main.cpp
Lab2/Tests/: CMakeLists.txt
Lab2/Tests/source/: ComplexForecastTests.cpp  SimpleForecastTests.cpp
Lab2/WeatherReport/: CMakeLists.txt
Lab2/WeatherReport/source/: ComplexForecast.cpp  SimpleForecast.cpp
Lab2/docs/html/: _complex_forecast_8h_source.html  _simple_forecast_8h_source.html  annotated.html  class_complex_forecast-members.html  class_complex_forecast.html  class_simple_forecast-members.html  class_simple_forecast.html  classes.html  dir_071a0ffcb8c1bddc4751f67bcfb61a2a.html  dir_34a6a59d6bbe527c0024f18bbecc8da2.html  dir_913811f4c785fae960468d72089260c6.html  dir_b59c4d24109b641bcf701782a78b6cf9.html  files.html  functions.html  functions_func.html  functions_rela.html  index.html  menudata.js
Lab2/docs/latex/: _complex_forecast_8h_source.tex  annotated.tex  files.tex  (+7 more)
Lab3/: CMakeLists.txt  README.md  project_structure.txt
Lab3/Components/: CMakeLists.txt
Lab3/Components/include/Components/: AttackComponent.h  BaseComponent.h  DefenseComponent.h  EnergyComponent.h  HealthComponent.h  MoraleComponent.h  MovementComponent.h  OwnerComponent.h  PositionComponent.h  QuantityComponent.h  ResurrectionComponent.h  SummonerComponent.h
Lab3/Components/source/: AttackComponent.cpp  DefenseComponent.cpp  EnergyComponent.cpp  HealthComponent.cpp  MoraleComponent.cpp  MovementComponent.cpp  OwnerComponent.cpp  PositionComponent.cpp  QuantityComponent.cpp  ResurrectionComponent.cpp  SummonerComponent.cpp
Lab3/Core/: CMakeLists.txt
Lab3/Core/include/Core/: Cell.h  Entity.h  EntityManager.h  Game.h  GameMap.h
Lab3/Core/source/: Cell.cpp  Entity.cpp  EntityManager.cpp  Game.cpp  GameMap.cpp
Lab3/Enums/: CMakeLists.txt
Lab3/Enums/include/Enums/: CellType.h
Lab3/Game/: CMakeLists.txt  game_data.json  main.cpp
Lab3/Tests/: CMakeLists.txt
Lab3/Tests/source/: matrixTest.cpp
Lab3/TypeObjects/: CMakeLists.txt
Lab3/TypeObjects/include/TypeObjects/: AbilityType.h  CreatureType.h  SchoolType.h
Lab3/Utilities/: CMakeLists.txt
Lab3/Utilities/include/Utilities/: Matrix.h  Vector2.h
(+19 files in other folders)
